flex_bsion/example/flexbison/sql/glrmysql.output
Terminals unused in grammar

   ADD
   ALTER
   ANALYZE
   BEFORE
   CALL
   CASCADE
   CHANGE
   CHECK
   COLUMN
   CONDITION
   CONSTRAINT
   CONTINUE
   CONVERT
   CURRENT_USER
   CURSOR
   DATABASES
   DECLARE
   DESCRIBE
   DETERMINISTIC
   DIV
   DROP
   DUAL
   EACH
   ELSEIF
   ENCLOSED
   ESCAPED
   EXIT
   EXPLAIN
   FETCH
   FOREIGN
   GRANT
   INFILE
   INOUT
   INSENSITIVE
   ITERATE
   KEYS
   KILL
   LEAVE
   LINES
   LOAD
   LOCALTIME
   LOCALTIMESTAMP
   LOCK
   LONG
   LOOP
   MATCH
   MINUTE_MICROSECOND
   MINUTE_SECOND
   MODIFIES
   NO_WRITE_TO_BINLOG
   NUMBER
   OPTIMIZE
   OPTION
   OPTIONALLY
   OUT
   OUTFILE
   PRECISION
   PROCEDURE
   PURGE
   READ
   READS
   REFERENCES
   RELEASE
   RENAME
   REPEAT
   REQUIRE
   RESTRICT
   RETURN
   REVOKE
   SCHEMAS
   SECOND_MICROSECOND
   SENSITIVE
   SEPARATOR
   SHOW
   SONAME
   SPATIAL
   SPECIFIC
   SQL
   SQLEXCEPTION
   SQLSTATE
   SQLWARNING
   SSL
   STARTING
   TERMINATED
   TO
   TRIGGER
   UNDO
   UNION
   UNLOCK
   USAGE
   UTC_DATE
   UTC_TIME
   UTC_TIMESTAMP
   VARYING
   WHILE
   WRITE


State 249 conflicts: 1 shift/reduce
State 317 conflicts: 1 shift/reduce
State 345 conflicts: 59 reduce/reduce


Grammar

    0 $accept: stmt_list $end

    1 stmt_list: stmt ';'
    2          | stmt_list stmt ';'

    3 stmt: select_stmt

    4 select_stmt: SELECT select_opts select_expr_list
    5            | SELECT select_opts select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list

    6 opt_where: /* empty */
    7          | WHERE expr

    8 opt_groupby: /* empty */
    9            | GROUP BY groupby_list opt_with_rollup

   10 groupby_list: expr opt_asc_desc
   11             | groupby_list ',' expr opt_asc_desc

   12 opt_asc_desc: /* empty */
   13             | ASC
   14             | DESC

   15 opt_with_rollup: /* empty */
   16                | WITH ROLLUP

   17 opt_having: /* empty */
   18           | HAVING expr

   19 opt_orderby: /* empty */
   20            | ORDER BY groupby_list

   21 opt_limit: /* empty */
   22          | LIMIT expr
   23          | LIMIT expr ',' expr

   24 opt_into_list: /* empty */
   25              | INTO column_list

   26 column_list: NAME
   27            | column_list ',' NAME

   28 select_opts: /* empty */
   29            | select_opts ALL
   30            | select_opts DISTINCT
   31            | select_opts DISTINCTROW
   32            | select_opts HIGH_PRIORITY
   33            | select_opts STRAIGHT_JOIN
   34            | select_opts SQL_SMALL_RESULT
   35            | select_opts SQL_BIG_RESULT
   36            | select_opts SQL_CALC_FOUND_ROWS

   37 select_expr_list: select_expr
   38                 | select_expr_list ',' select_expr
   39                 | '*'

   40 select_expr: expr opt_as_alias

   41 table_references: table_reference
   42                 | table_references ',' table_reference

   43 table_reference: table_factor
   44                | join_table

   45 table_factor: NAME opt_as_alias index_hint
   46             | NAME '.' NAME opt_as_alias index_hint
   47             | table_subquery opt_as NAME
   48             | '(' table_references ')'

   49 opt_as: AS
   50       | /* empty */

   51 opt_as_alias: AS NAME
   52             | NAME
   53             | /* empty */

   54 join_table: table_reference opt_inner_cross JOIN table_factor opt_join_condition
   55           | table_reference STRAIGHT_JOIN table_factor
   56           | table_reference STRAIGHT_JOIN table_factor ON expr
   57           | table_reference left_or_right opt_outer JOIN table_factor join_condition
   58           | table_reference NATURAL opt_left_or_right_outer JOIN table_factor

   59 opt_inner_cross: /* empty */
   60                | INNER
   61                | CROSS

   62 opt_outer: /* empty */
   63          | OUTER

   64 left_or_right: LEFT
   65              | RIGHT

   66 opt_left_or_right_outer: LEFT opt_outer
   67                        | RIGHT opt_outer
   68                        | /* empty */

   69 opt_join_condition: join_condition
   70                   | /* empty */

   71 join_condition: ON expr
   72               | USING '(' column_list ')'

   73 index_hint: USE KEY opt_for_join '(' index_list ')'
   74           | IGNORE KEY opt_for_join '(' index_list ')'
   75           | FORCE KEY opt_for_join '(' index_list ')'
   76           | /* empty */

   77 opt_for_join: FOR JOIN
   78             | /* empty */

   79 index_list: NAME
   80           | index_list ',' NAME

   81 table_subquery: '(' select_stmt ')'

   82 stmt: delete_stmt

   83 delete_stmt: DELETE delete_opts FROM NAME opt_where opt_orderby opt_limit

   84 delete_opts: delete_opts LOW_PRIORITY
   85            | delete_opts QUICK
   86            | delete_opts IGNORE
   87            | /* empty */

   88 delete_stmt: DELETE delete_opts delete_list FROM table_references opt_where

   89 delete_list: NAME opt_dot_star
   90            | delete_list ',' NAME opt_dot_star

   91 opt_dot_star: /* empty */
   92             | '.' '*'

   93 delete_stmt: DELETE delete_opts FROM delete_list USING table_references opt_where

   94 stmt: insert_stmt

   95 insert_stmt: INSERT insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate

   96 opt_ondupupdate: /* empty */
   97                | ON DUPLICATE KEY UPDATE insert_asgn_list

   98 insert_opts: /* empty */
   99            | insert_opts LOW_PRIORITY
  100            | insert_opts DELAYED
  101            | insert_opts HIGH_PRIORITY
  102            | insert_opts IGNORE

  103 opt_into: INTO
  104         | /* empty */

  105 opt_col_names: /* empty */
  106              | '(' column_list ')'

  107 insert_vals_list: '(' insert_vals ')'
  108                 | insert_vals_list ',' '(' insert_vals ')'

  109 insert_vals: expr
  110            | DEFAULT
  111            | insert_vals ',' expr
  112            | insert_vals ',' DEFAULT

  113 insert_stmt: INSERT insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  114            | INSERT insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  115 insert_asgn_list: NAME COMPARISON expr
  116                 | NAME COMPARISON DEFAULT
  117                 | insert_asgn_list ',' NAME COMPARISON expr
  118                 | insert_asgn_list ',' NAME COMPARISON DEFAULT

  119 stmt: replace_stmt

  120 replace_stmt: REPLACE insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  121             | REPLACE insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  122             | REPLACE insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  123 stmt: update_stmt

  124 update_stmt: UPDATE update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit

  125 update_opts: /* empty */
  126            | insert_opts LOW_PRIORITY
  127            | insert_opts IGNORE

  128 update_asgn_list: NAME COMPARISON expr
  129                 | NAME '.' NAME COMPARISON expr
  130                 | update_asgn_list ',' NAME COMPARISON expr
  131                 | update_asgn_list ',' NAME '.' NAME COMPARISON expr

  132 stmt: create_database_stmt

  133 create_database_stmt: CREATE DATABASE opt_if_not_exists NAME
  134                     | CREATE SCHEMA opt_if_not_exists NAME

  135 opt_if_not_exists: /* empty */
  136                  | IF NOT EXISTS

  137 stmt: create_table_stmt

  138 create_table_stmt: CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
  139                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
  140                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
  141                  | CREATE opt_temporary TABLE opt_if_not_exists NAME create_select_statement
  142                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
  143                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement

  144 create_col_list: create_definition
  145                | create_col_list ',' create_definition

  146 $@1: /* empty */

  147 create_definition: $@1 NAME data_type column_atts
  148                  | PRIMARY KEY '(' column_list ')'
  149                  | KEY '(' column_list ')'
  150                  | INDEX '(' column_list ')'
  151                  | FULLTEXT INDEX '(' column_list ')'
  152                  | FULLTEXT KEY '(' column_list ')'

  153 column_atts: /* empty */
  154            | column_atts NOT NULLX
  155            | column_atts NULLX
  156            | column_atts DEFAULT STRING
  157            | column_atts DEFAULT INTNUM
  158            | column_atts DEFAULT APPROXNUM
  159            | column_atts DEFAULT BOOL
  160            | column_atts AUTO_INCREMENT
  161            | column_atts UNIQUE '(' column_list ')'
  162            | column_atts UNIQUE KEY
  163            | column_atts PRIMARY KEY
  164            | column_atts KEY
  165            | column_atts COMMENT STRING

  166 opt_length: /* empty */
  167           | '(' INTNUM ')'
  168           | '(' INTNUM ',' INTNUM ')'

  169 opt_binary: /* empty */
  170           | BINARY

  171 opt_uz: /* empty */
  172       | opt_uz UNSIGNED
  173       | opt_uz ZEROFILL

  174 opt_csc: /* empty */
  175        | opt_csc CHAR SET STRING
  176        | opt_csc COLLATE STRING

  177 data_type: BIT opt_length
  178          | TINYINT opt_length opt_uz
  179          | SMALLINT opt_length opt_uz
  180          | MEDIUMINT opt_length opt_uz
  181          | INT opt_length opt_uz
  182          | INTEGER opt_length opt_uz
  183          | BIGINT opt_length opt_uz
  184          | REAL opt_length opt_uz
  185          | DOUBLE opt_length opt_uz
  186          | FLOAT opt_length opt_uz
  187          | DECIMAL opt_length opt_uz
  188          | DATE
  189          | TIME
  190          | TIMESTAMP
  191          | DATETIME
  192          | YEAR
  193          | CHAR opt_length opt_csc
  194          | VARCHAR '(' INTNUM ')' opt_csc
  195          | BINARY opt_length
  196          | VARBINARY '(' INTNUM ')'
  197          | TINYBLOB
  198          | BLOB
  199          | MEDIUMBLOB
  200          | LONGBLOB
  201          | TINYTEXT opt_binary opt_csc
  202          | TEXT opt_binary opt_csc
  203          | MEDIUMTEXT opt_binary opt_csc
  204          | LONGTEXT opt_binary opt_csc
  205          | ENUM '(' enum_list ')' opt_csc
  206          | SET '(' enum_list ')' opt_csc

  207 enum_list: STRING
  208          | enum_list ',' STRING

  209 create_select_statement: opt_ignore_replace opt_as select_stmt

  210 opt_ignore_replace: /* empty */
  211                   | IGNORE
  212                   | REPLACE

  213 opt_temporary: /* empty */
  214              | TEMPORARY

  215 stmt: set_stmt

  216 set_stmt: SET set_list

  217 set_list: set_expr
  218         | set_list ',' set_expr

  219 set_expr: USERVAR COMPARISON expr
  220         | USERVAR ASSIGN expr

  221 expr: NAME
  222     | USERVAR
  223     | NAME '.' NAME
  224     | STRING
  225     | INTNUM
  226     | APPROXNUM
  227     | BOOL
  228     | expr '+' expr
  229     | expr '-' expr
  230     | expr '*' expr
  231     | expr '/' expr
  232     | expr '%' expr
  233     | expr MOD expr
  234     | '-' expr
  235     | expr ANDOP expr
  236     | expr OR expr
  237     | expr XOR expr
  238     | expr COMPARISON expr
  239     | expr COMPARISON '(' select_stmt ')'
  240     | expr COMPARISON ANY '(' select_stmt ')'
  241     | expr COMPARISON SOME '(' select_stmt ')'
  242     | expr COMPARISON ALL '(' select_stmt ')'
  243     | expr '|' expr
  244     | expr '&' expr
  245     | expr '^' expr
  246     | expr SHIFT expr
  247     | NOT expr
  248     | '!' expr
  249     | USERVAR ASSIGN expr
  250     | expr IS NULLX
  251     | expr IS NOT NULLX
  252     | expr IS BOOL
  253     | expr IS NOT BOOL
  254     | expr BETWEEN expr AND expr

  255 val_list: expr
  256         | expr ',' val_list

  257 opt_val_list: /* empty */
  258             | val_list

  259 expr: expr IN '(' val_list ')'
  260     | expr NOT IN '(' val_list ')'
  261     | expr IN '(' select_stmt ')'
  262     | expr NOT IN '(' select_stmt ')'
  263     | EXISTS '(' select_stmt ')'
  264     | NOT EXISTS '(' select_stmt ')'
  265     | NAME '(' opt_val_list ')'
  266     | FCOUNT '(' '*' ')'
  267     | FCOUNT '(' expr ')'
  268     | FSUBSTRING '(' val_list ')'
  269     | FSUBSTRING '(' expr FROM expr ')'
  270     | FSUBSTRING '(' expr FROM expr FOR expr ')'
  271     | FTRIM '(' val_list ')'
  272     | FTRIM '(' trim_ltb expr FROM val_list ')'

  273 trim_ltb: LEADING
  274         | TRAILING
  275         | BOTH

  276 expr: FDATE_ADD '(' expr ',' interval_exp ')'
  277     | FDATE_SUB '(' expr ',' interval_exp ')'

  278 interval_exp: INTERVAL expr DAY_HOUR
  279             | INTERVAL expr DAY_MICROSECOND
  280             | INTERVAL expr DAY_MINUTE
  281             | INTERVAL expr DAY_SECOND
  282             | INTERVAL expr YEAR_MONTH
  283             | INTERVAL expr YEAR
  284             | INTERVAL expr HOUR_MICROSECOND
  285             | INTERVAL expr HOUR_MINUTE
  286             | INTERVAL expr HOUR_SECOND

  287 expr: CASE expr case_list END
  288     | CASE expr case_list ELSE expr END
  289     | CASE case_list END
  290     | CASE case_list ELSE expr END

  291 case_list: WHEN expr THEN expr
  292          | case_list WHEN expr THEN expr

  293 expr: expr LIKE expr
  294     | expr NOT LIKE expr
  295     | expr REGEXP expr
  296     | expr NOT REGEXP expr
  297     | CURRENT_TIMESTAMP
  298     | CURRENT_DATE
  299     | CURRENT_TIME
  300     | BINARY expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 248
'%' (37) 232
'&' (38) 244
'(' (40) 48 72 73 74 75 81 106 107 108 138 139 140 142 148 149 150
    151 152 161 167 168 194 196 205 206 239 240 241 242 259 260 261
    262 263 264 265 266 267 268 269 270 271 272 276 277
')' (41) 48 72 73 74 75 81 106 107 108 138 139 140 142 148 149 150
    151 152 161 167 168 194 196 205 206 239 240 241 242 259 260 261
    262 263 264 265 266 267 268 269 270 271 272 276 277
'*' (42) 39 92 230 266
'+' (43) 228
',' (44) 11 23 27 38 42 80 90 108 111 112 117 118 130 131 145 168 208
    218 256 276 277
'-' (45) 229 234
'.' (46) 46 92 129 131 139 142 143 223
'/' (47) 231
';' (59) 1 2
'^' (94) 245
'|' (124) 243
error (256)
NAME (258) 26 27 45 46 47 51 52 79 80 83 89 90 95 113 114 115 116 117
    118 120 121 122 128 129 130 131 133 134 138 139 140 141 142 143
    147 221 223 265
STRING (259) 156 165 175 176 207 208 224
INTNUM (260) 157 167 168 194 196 225
BOOL (261) 159 227 252 253
APPROXNUM (262) 158 226
USERVAR (263) 219 220 222 249
ASSIGN (264) 220 249
OR (265) 236
XOR (266) 237
ANDOP (267) 235
REGEXP (268) 295 296
LIKE (269) 293 294
IS (270) 250 251 252 253
IN (271) 259 260 261 262
NOT (272) 136 154 247 251 253 260 262 264 294 296
BETWEEN (273) 254
COMPARISON (274) 115 116 117 118 128 129 130 131 219 238 239 240 241
    242
SHIFT (275) 246
MOD (276) 233
UMINUS (277)
ADD (278)
ALL (279) 29 242
ALTER (280)
ANALYZE (281)
AND (282) 254
ANY (283) 240
AS (284) 49 51
ASC (285) 13
AUTO_INCREMENT (286) 160
BEFORE (287)
BIGINT (288) 183
BINARY (289) 170 195 300
BIT (290) 177
BLOB (291) 198
BOTH (292) 275
BY (293) 9 20
CALL (294)
CASCADE (295)
CASE (296) 287 288 289 290
CHANGE (297)
CHAR (298) 175 193
CHECK (299)
COLLATE (300) 176
COLUMN (301)
COMMENT (302) 165
CONDITION (303)
CONSTRAINT (304)
CONTINUE (305)
CONVERT (306)
CREATE (307) 133 134 138 139 140 141 142 143
CROSS (308) 61
CURRENT_DATE (309) 298
CURRENT_TIME (310) 299
CURRENT_TIMESTAMP (311) 297
CURRENT_USER (312)
CURSOR (313)
DATABASE (314) 133
DATABASES (315)
DATE (316) 188
DATETIME (317) 191
DAY_HOUR (318) 278
DAY_MICROSECOND (319) 279
DAY_MINUTE (320) 280
DAY_SECOND (321) 281
DECIMAL (322) 187
DECLARE (323)
DEFAULT (324) 110 112 116 118 156 157 158 159
DELAYED (325) 100
DELETE (326) 83 88 93
DESC (327) 14
DESCRIBE (328)
DETERMINISTIC (329)
DISTINCT (330) 30
DISTINCTROW (331) 31
DIV (332)
DOUBLE (333) 185
DROP (334)
DUAL (335)
EACH (336)
ELSE (337) 288 290
ELSEIF (338)
ENCLOSED (339)
END (340) 287 288 289 290
ENUM (341) 205
ESCAPED (342)
EXISTS (343) 136 263 264
EXIT (344)
EXPLAIN (345)
FETCH (346)
FLOAT (347) 186
FOR (348) 77 270
FORCE (349) 75
FOREIGN (350)
FROM (351) 5 83 88 93 269 270 272
FULLTEXT (352) 151 152
GRANT (353)
GROUP (354) 9
HAVING (355) 18
HIGH_PRIORITY (356) 32 101
HOUR_MICROSECOND (357) 284
HOUR_MINUTE (358) 285
HOUR_SECOND (359) 286
IF (360) 136
IGNORE (361) 74 86 102 127 211
INDEX (362) 150 151
INFILE (363)
INNER (364) 60
INOUT (365)
INSENSITIVE (366)
INSERT (367) 95 113 114
INT (368) 181
INTEGER (369) 182
INTERVAL (370) 278 279 280 281 282 283 284 285 286
INTO (371) 25 103
ITERATE (372)
JOIN (373) 54 57 58 77
KEY (374) 73 74 75 97 148 149 152 162 163 164
KEYS (375)
KILL (376)
LEADING (377) 273
LEAVE (378)
LEFT (379) 64 66
LIMIT (380) 22 23
LINES (381)
LOAD (382)
LOCALTIME (383)
LOCALTIMESTAMP (384)
LOCK (385)
LONG (386)
LONGBLOB (387) 200
LONGTEXT (388) 204
LOOP (389)
LOW_PRIORITY (390) 84 99 126
MATCH (391)
MEDIUMBLOB (392) 199
MEDIUMINT (393) 180
MEDIUMTEXT (394) 203
MINUTE_MICROSECOND (395)
MINUTE_SECOND (396)
MODIFIES (397)
NATURAL (398) 58
NO_WRITE_TO_BINLOG (399)
NULLX (400) 154 155 250 251
NUMBER (401)
ON (402) 56 71 97
DUPLICATE (403) 97
OPTIMIZE (404)
OPTION (405)
OPTIONALLY (406)
ORDER (407) 20
OUT (408)
OUTER (409) 63
OUTFILE (410)
PRECISION (411)
PRIMARY (412) 148 163
PROCEDURE (413)
PURGE (414)
QUICK (415) 85
READ (416)
READS (417)
REAL (418) 184
REFERENCES (419)
RELEASE (420)
RENAME (421)
REPEAT (422)
REPLACE (423) 120 121 122 212
REQUIRE (424)
RESTRICT (425)
RETURN (426)
REVOKE (427)
RIGHT (428) 65 67
ROLLUP (429) 16
SCHEMA (430) 134
SCHEMAS (431)
SECOND_MICROSECOND (432)
SELECT (433) 4 5
SENSITIVE (434)
SEPARATOR (435)
SET (436) 113 121 124 175 206 216
SHOW (437)
SMALLINT (438) 179
SOME (439) 241
SONAME (440)
SPATIAL (441)
SPECIFIC (442)
SQL (443)
SQLEXCEPTION (444)
SQLSTATE (445)
SQLWARNING (446)
SQL_BIG_RESULT (447) 35
SQL_CALC_FOUND_ROWS (448) 36
SQL_SMALL_RESULT (449) 34
SSL (450)
STARTING (451)
STRAIGHT_JOIN (452) 33 55 56
TABLE (453) 138 139 140 141 142 143
TEMPORARY (454) 214
TEXT (455) 202
TERMINATED (456)
THEN (457) 291 292
TIME (458) 189
TIMESTAMP (459) 190
TINYBLOB (460) 197
TINYINT (461) 178
TINYTEXT (462) 201
TO (463)
TRAILING (464) 274
TRIGGER (465)
UNDO (466)
UNION (467)
UNIQUE (468) 161 162
UNLOCK (469)
UNSIGNED (470) 172
UPDATE (471) 97 124
USAGE (472)
USE (473) 73
USING (474) 72 93
UTC_DATE (475)
UTC_TIME (476)
UTC_TIMESTAMP (477)
VALUES (478) 95 120
VARBINARY (479) 196
VARCHAR (480) 194
VARYING (481)
WHEN (482) 291 292
WHERE (483) 7
WHILE (484)
WITH (485) 16
WRITE (486)
YEAR (487) 192 283
YEAR_MONTH (488) 282
ZEROFILL (489) 173
FSUBSTRING (490) 268 269 270
FTRIM (491) 271 272
FDATE_ADD (492) 276
FDATE_SUB (493) 277
FCOUNT (494) 266 267


Nonterminals, with rules where they appear

$accept (254)
    on left: 0
stmt_list (255)
    on left: 1 2, on right: 0 2
stmt (256)
    on left: 3 82 94 119 123 132 137 215, on right: 1 2
select_stmt (257)
    on left: 4 5, on right: 3 81 114 122 209 239 240 241 242 261 262
    263 264
opt_where (258)
    on left: 6 7, on right: 5 83 88 93 124
opt_groupby (259)
    on left: 8 9, on right: 5
groupby_list (260)
    on left: 10 11, on right: 9 11 20
opt_asc_desc (261)
    on left: 12 13 14, on right: 10 11
opt_with_rollup (262)
    on left: 15 16, on right: 9
opt_having (263)
    on left: 17 18, on right: 5
opt_orderby (264)
    on left: 19 20, on right: 5 83 124
opt_limit (265)
    on left: 21 22 23, on right: 5 83 124
opt_into_list (266)
    on left: 24 25, on right: 5
column_list (267)
    on left: 26 27, on right: 25 27 72 106 148 149 150 151 152 161
select_opts (268)
    on left: 28 29 30 31 32 33 34 35 36, on right: 4 5 29 30 31 32
    33 34 35 36
select_expr_list (269)
    on left: 37 38 39, on right: 4 5 38
select_expr (270)
    on left: 40, on right: 37 38
table_references (271)
    on left: 41 42, on right: 5 42 48 88 93 124
table_reference (272)
    on left: 43 44, on right: 41 42 54 55 56 57 58
table_factor (273)
    on left: 45 46 47 48, on right: 43 54 55 56 57 58
opt_as (274)
    on left: 49 50, on right: 47 209
opt_as_alias (275)
    on left: 51 52 53, on right: 40 45 46
join_table (276)
    on left: 54 55 56 57 58, on right: 44
opt_inner_cross (277)
    on left: 59 60 61, on right: 54
opt_outer (278)
    on left: 62 63, on right: 57 66 67
left_or_right (279)
    on left: 64 65, on right: 57
opt_left_or_right_outer (280)
    on left: 66 67 68, on right: 58
opt_join_condition (281)
    on left: 69 70, on right: 54
join_condition (282)
    on left: 71 72, on right: 57 69
index_hint (283)
    on left: 73 74 75 76, on right: 45 46
opt_for_join (284)
    on left: 77 78, on right: 73 74 75
index_list (285)
    on left: 79 80, on right: 73 74 75 80
table_subquery (286)
    on left: 81, on right: 47
delete_stmt (287)
    on left: 83 88 93, on right: 82
delete_opts (288)
    on left: 84 85 86 87, on right: 83 84 85 86 88 93
delete_list (289)
    on left: 89 90, on right: 88 90 93
opt_dot_star (290)
    on left: 91 92, on right: 89 90
insert_stmt (291)
    on left: 95 113 114, on right: 94
opt_ondupupdate (292)
    on left: 96 97, on right: 95 113 114 120 121 122
insert_opts (293)
    on left: 98 99 100 101 102, on right: 95 99 100 101 102 113 114
    120 121 122 126 127
opt_into (294)
    on left: 103 104, on right: 95 113 114 120 121 122
opt_col_names (295)
    on left: 105 106, on right: 95 114 120 122
insert_vals_list (296)
    on left: 107 108, on right: 95 108 120
insert_vals (297)
    on left: 109 110 111 112, on right: 107 108 111 112
insert_asgn_list (298)
    on left: 115 116 117 118, on right: 97 113 117 118 121
replace_stmt (299)
    on left: 120 121 122, on right: 119
update_stmt (300)
    on left: 124, on right: 123
update_opts (301)
    on left: 125 126 127, on right: 124
update_asgn_list (302)
    on left: 128 129 130 131, on right: 124 130 131
create_database_stmt (303)
    on left: 133 134, on right: 132
opt_if_not_exists (304)
    on left: 135 136, on right: 133 134 138 139 140 141 142 143
create_table_stmt (305)
    on left: 138 139 140 141 142 143, on right: 137
create_col_list (306)
    on left: 144 145, on right: 138 139 140 142 145
create_definition (307)
    on left: 147 148 149 150 151 152, on right: 144 145
$@1 (308)
    on left: 146, on right: 147
column_atts (309)
    on left: 153 154 155 156 157 158 159 160 161 162 163 164 165, on right:
    147 154 155 156 157 158 159 160 161 162 163 164 165
opt_length (310)
    on left: 166 167 168, on right: 177 178 179 180 181 182 183 184
    185 186 187 193 195
opt_binary (311)
    on left: 169 170, on right: 201 202 203 204
opt_uz (312)
    on left: 171 172 173, on right: 172 173 178 179 180 181 182 183
    184 185 186 187
opt_csc (313)
    on left: 174 175 176, on right: 175 176 193 194 201 202 203 204
    205 206
data_type (314)
    on left: 177 178 179 180 181 182 183 184 185 186 187 188 189 190
    191 192 193 194 195 196 197 198 199 200 201 202 203 204 205 206,
    on right: 147
enum_list (315)
    on left: 207 208, on right: 205 206 208
create_select_statement (316)
    on left: 209, on right: 140 141 142 143
opt_ignore_replace (317)
    on left: 210 211 212, on right: 209
opt_temporary (318)
    on left: 213 214, on right: 138 139 140 141 142 143
set_stmt (319)
    on left: 216, on right: 215
set_list (320)
    on left: 217 218, on right: 216 218
set_expr (321)
    on left: 219 220, on right: 217 218
expr (322)
    on left: 221 222 223 224 225 226 227 228 229 230 231 232 233 234
    235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 250
    251 252 253 254 259 260 261 262 263 264 265 266 267 268 269 270
    271 272 276 277 287 288 289 290 293 294 295 296 297 298 299 300,
    on right: 7 10 11 18 22 23 40 56 71 109 111 115 117 128 129 130
    131 219 220 228 229 230 231 232 233 234 235 236 237 238 239 240
    241 242 243 244 245 246 247 248 249 250 251 252 253 254 255 256
    259 260 261 262 267 269 270 272 276 277 278 279 280 281 282 283
    284 285 286 287 288 290 291 292 293 294 295 296 300
val_list (323)
    on left: 255 256, on right: 256 258 259 260 268 271 272
opt_val_list (324)
    on left: 257 258, on right: 265
trim_ltb (325)
    on left: 273 274 275, on right: 272
interval_exp (326)
    on left: 278 279 280 281 282 283 284 285 286, on right: 276 277
case_list (327)
    on left: 291 292, on right: 287 288 289 290 292


state 0

    0 $accept: . stmt_list $end

    CREATE   shift, and go to state 1
    DELETE   shift, and go to state 2
    INSERT   shift, and go to state 3
    REPLACE  shift, and go to state 4
    SELECT   shift, and go to state 5
    SET      shift, and go to state 6
    UPDATE   shift, and go to state 7

    stmt_list             go to state 8
    stmt                  go to state 9
    select_stmt           go to state 10
    delete_stmt           go to state 11
    insert_stmt           go to state 12
    replace_stmt          go to state 13
    update_stmt           go to state 14
    create_database_stmt  go to state 15
    create_table_stmt     go to state 16
    set_stmt              go to state 17


state 1

  133 create_database_stmt: CREATE . DATABASE opt_if_not_exists NAME
  134                     | CREATE . SCHEMA opt_if_not_exists NAME
  138 create_table_stmt: CREATE . opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
  139                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
  140                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
  141                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME create_select_statement
  142                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
  143                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement

    DATABASE   shift, and go to state 18
    SCHEMA     shift, and go to state 19
    TEMPORARY  shift, and go to state 20

    $default  reduce using rule 213 (opt_temporary)

    opt_temporary  go to state 21


state 2

   83 delete_stmt: DELETE . delete_opts FROM NAME opt_where opt_orderby opt_limit
   88            | DELETE . delete_opts delete_list FROM table_references opt_where
   93            | DELETE . delete_opts FROM delete_list USING table_references opt_where

    $default  reduce using rule 87 (delete_opts)

    delete_opts  go to state 22


state 3

   95 insert_stmt: INSERT . insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  113            | INSERT . insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  114            | INSERT . insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

    $default  reduce using rule 98 (insert_opts)

    insert_opts  go to state 23


state 4

  120 replace_stmt: REPLACE . insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  121             | REPLACE . insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  122             | REPLACE . insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

    $default  reduce using rule 98 (insert_opts)

    insert_opts  go to state 24


state 5

    4 select_stmt: SELECT . select_opts select_expr_list
    5            | SELECT . select_opts select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list

    $default  reduce using rule 28 (select_opts)

    select_opts  go to state 25


state 6

  216 set_stmt: SET . set_list

    USERVAR  shift, and go to state 26

    set_list  go to state 27
    set_expr  go to state 28


state 7

  124 update_stmt: UPDATE . update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit

    NAME      reduce using rule 125 (update_opts)
    '('       reduce using rule 125 (update_opts)
    $default  reduce using rule 98 (insert_opts)

    insert_opts  go to state 29
    update_opts  go to state 30


state 8

    0 $accept: stmt_list . $end
    2 stmt_list: stmt_list . stmt ';'

    $end     shift, and go to state 31
    CREATE   shift, and go to state 1
    DELETE   shift, and go to state 2
    INSERT   shift, and go to state 3
    REPLACE  shift, and go to state 4
    SELECT   shift, and go to state 5
    SET      shift, and go to state 6
    UPDATE   shift, and go to state 7

    stmt                  go to state 32
    select_stmt           go to state 10
    delete_stmt           go to state 11
    insert_stmt           go to state 12
    replace_stmt          go to state 13
    update_stmt           go to state 14
    create_database_stmt  go to state 15
    create_table_stmt     go to state 16
    set_stmt              go to state 17


state 9

    1 stmt_list: stmt . ';'

    ';'  shift, and go to state 33


state 10

    3 stmt: select_stmt .

    $default  reduce using rule 3 (stmt)


state 11

   82 stmt: delete_stmt .

    $default  reduce using rule 82 (stmt)


state 12

   94 stmt: insert_stmt .

    $default  reduce using rule 94 (stmt)


state 13

  119 stmt: replace_stmt .

    $default  reduce using rule 119 (stmt)


state 14

  123 stmt: update_stmt .

    $default  reduce using rule 123 (stmt)


state 15

  132 stmt: create_database_stmt .

    $default  reduce using rule 132 (stmt)


state 16

  137 stmt: create_table_stmt .

    $default  reduce using rule 137 (stmt)


state 17

  215 stmt: set_stmt .

    $default  reduce using rule 215 (stmt)


state 18

  133 create_database_stmt: CREATE DATABASE . opt_if_not_exists NAME

    IF  shift, and go to state 34

    $default  reduce using rule 135 (opt_if_not_exists)

    opt_if_not_exists  go to state 35


state 19

  134 create_database_stmt: CREATE SCHEMA . opt_if_not_exists NAME

    IF  shift, and go to state 34

    $default  reduce using rule 135 (opt_if_not_exists)
